--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,11 @@ body {
     text-align: left;
 }
 
+.SongLibrary h1 {
+    color: #fff;
+    padding-left: 10px;
+    text-align: left;
+}
 .table {
     background-color: #121212;
     margin-bottom: 50px;
